--- a/app/templates/components/form-body.hbs
+++ b/app/templates/components/form-body.hbs
@@ -1,5 +1,10 @@
 <div class="content">
 	<button id="h1">H1</button>
+	<button id="b">B</button>
+	<button id="i">I</button>
+	<button id="card">card</button>
+	<button id="comment">Comment</button>
 	<div class="body"></div>
+
 </div>
 {{yield}}
