added cards, atoms, sections, and markups directories

--- a/app/templates/components/card-picker.hbs
+++ b/app/templates/components/card-picker.hbs
@@ -1,5 +1,6 @@
 {{yield}}
-<div>
-	<div class="card" draggable="true">card</div>
+<div id	="card-holder">
+	<div id="card-drop" draggable="true">kitten</div>
+	<div id="card-drop2" draggable="true">chart</div>
 
 </div>
