--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,8 +3,9 @@
 
 }
 body {
-	font-family: helvetica;
+	font-family: "open sans";
 	text-align:justify;
+
 
 }
 .content {
@@ -16,6 +17,9 @@ body {
 
 h1 {
 	font-family: "open sans";
+	font-size: 3em;
+	margin:30px 0 0 0;
+	padding:0;
 }
 
 	.card-right {
@@ -42,17 +46,7 @@ h1 {
 		margin 0 0 12px;
 		padding:0;
 	}
-	.test {
-			width:200px;
-			height:200px;
-			background-color:pink;
-			border:100px solid yellow;
-			margin:0;
-			padding:0;
-	}
-	.card .test {
-		width:600px;
-	}
+
 	.__mobiledoc-card {
 		margin:0;
 		padding:0;
@@ -65,8 +59,18 @@ comment {
 
 .dropper-left {
 	box-shadow: -7px 0px 13px -10px rgba(0,6,255,1);
+	position:relative;
 }
-
+.dropper-left:before {
+  content:"\a0";
+  display:block;
+  position:absolute;
+  padding:2px 0;
+  line-height:1px;
+  width:800px;
+  height:100%;
+  border-left:5px rgba(0,6,255,1) solid; 
+}
 
 .dropper-right {
 	box-shadow: 7px 0px 13px -10px rgba(0,6,255,1);
@@ -80,3 +84,41 @@ comment {
 .dropper-bottom {
 	box-shadow: 0px 7px 13px -10px rgba(0,6,255,1);
 }
+
+
+#toolbar {
+	position:fixed;
+
+}
+#card-holder {
+	position:fixed;
+	width:160px;
+	left:10px;
+	top:10px;
+}
+#card-drop {
+	width:160px;
+	height:100px;
+	border:1px solid;
+	border-radius: 5px;
+	background-image: url('https://placekitten.com/160/100');
+	text-align: center;
+	color: #cecece;
+	line-height: 100px;
+	   opacity: 0.5;
+	   margin:10px;
+}
+
+#card-drop2 {
+	width:160px;
+	height:100px;
+	border:1px solid;
+	border-radius: 5px;
+	background-image: url('http://Chartholdr.io/line/160/100');
+	text-align: center;
+	color: #111111;
+	line-height: 100px;
+	   opacity: 0.5;
+	   margin:10px;
+}
+
