--- a/app/templates/components/form-body.hbs
+++ b/app/templates/components/form-body.hbs
@@ -1,9 +1,15 @@
 <div class="content">
-	<button id="h1">H1</button>
-	<button id="b">B</button>
-	<button id="i">I</button>
-	<button id="card">card</button>
-	<button id="comment">Comment</button>
+	<div id="toolbar">
+		<button id="h1">H1</button>
+		<button id="h2">H2</button>
+		<button id="h3">H3</button>
+		<button id="b">B</button>
+		<button id="i">I</button>
+		<button id="ul">UL</button>
+		<button id="ul">OL</button>
+		
+		<button id="comment">Comment</button>
+	</div>
 	<div class="body"></div>
 
 </div>
