added more cards

--- a/app/templates/components/card-picker.hbs
+++ b/app/templates/components/card-picker.hbs
@@ -2,5 +2,6 @@
 <div id	="card-holder">
 	<div id="card-drop" draggable="true">kitten</div>
 	<div id="card-drop2" draggable="true">chart</div>
+	<div id="card-drop3" draggable="true">card-picker</div>
 
 </div>
