--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -22,68 +22,75 @@ h1 {
 	padding:0;
 }
 
-	.card-right {
-		float: right;
-		margin:-10px 0 0 10px;
-		
-		padding:0;
-		width:400px;
-	}
+.card-right {
+	float: right;
+	margin:-10px 0 0 10px;
+	
+	padding:0;
+	width:50%;
+}
 
-	.card-left {
-		float: left;
-		margin:-10px 10px 0 0;
-		padding:0;
-		width:400px;
-	}
-	.card {
-		margin: 10px 10px 0 0;
-		padding:0;
-		width:800px;
-	}
-	p {
-		
-		margin 0 0 12px;
-		padding:0;
-	}
+.card-left {
+	float: left;
+	margin:-10px 10px 0 0;
+	padding:0;
+	width:50%;
+}
+.card {
 
-	.__mobiledoc-card {
-		margin:0;
-		padding:0;
-	}
+	padding:0;
+	width:100%;
+	line-height: 0px;
+}
+p {
+	
+	margin: 0 0 12px;
+	padding:0;
+}
 
-comment {
-	background-color: yellow;
+.__mobiledoc-card {
+	margin:0;
+	padding:0;
+	height:100%;
 }
 
 
-.dropper-left {
-	box-shadow: -7px 0px 13px -10px rgba(0,6,255,1);
+
+.dropper-left, .dropper-right, .dropper-top, .dropper-bottom {
 	position:relative;
 }
-.dropper-left:before {
-  content:"\a0";
+.dropper-left:before, .dropper-right:after, .dropper-top:before, .dropper-bottom:after {
+  content:"";
   display:block;
   position:absolute;
   padding:2px 0;
   line-height:1px;
-  width:800px;
+  width:1px;
   height:100%;
-  border-left:5px rgba(0,6,255,1) solid; 
+  box-shadow: -13px 0px 13px 3px rgba(3,3,3,0.6);;
 }
 
-.dropper-right {
-	box-shadow: 7px 0px 13px -10px rgba(0,6,255,1);
+
+.dropper-top:before {
+  width:100%;
+  height:0px;
+  box-shadow: 0px -13px 13px rgba(3,3,3,0.6);;
 }
 
-.dropper-top {
-	/*box-shadow: inset 0px 7px 29px -12px rgba(128,128,128,1);*/
-	box-shadow: 0px -7px 13px -10px rgba(0,6,255,1);
+.dropper-right:after {
+  height:100%;
+  width:1px;
+  top:0px;	
+  right:0px;
+  box-shadow: 13px 0px 13px 3px rgba(3,3,3,0.6);;
 }
 
-.dropper-bottom {
-	box-shadow: 0px 7px 13px -10px rgba(0,6,255,1);
+.dropper-bottom:after {
+  width:100%;
+  height:0px;
+  box-shadow: 0px 13px 13px rgba(3,3,3,0.6);;
 }
+
 
 
 #toolbar {
@@ -106,12 +113,38 @@ comment {
 	
 	text-align: center;
 	color: #fff;
-	line-height: 100px;
+	
+	vertical-align: bottom;
    opacity: 0.5;
    margin:10px;
 }
 
 .card-drop label {
-	background-color: rgba(3,3,3,0.3);
-	padding:0 10px 0 10px;
+	display: block;
+	background-color: rgba(3,3,3,0.6);
+	
+	width:100%;
+}
+
+
+
+
+/**SLIDESHOW CARD**/
+.card-slideshow {
+	height:100%;
+}
+.card-slideshow p {
+	display:block;
+	width:100%;
+	color:#cecece;
+	background-color: rgba(3,3,3,0.6);
+	font-size: 1em;
+	line-height: 1em;
+	position:absolute;
+	bottom:0px;
+	z-index: 9999;
+	margin:0;
+	
+
+	
 }
