--- a/app/templates/components/card-picker.hbs
+++ b/app/templates/components/card-picker.hbs
@@ -1,9 +1,6 @@
 {{yield}}
 <div id	="card-holder">
-	<div id="card-drop" draggable="true">kitten</div>
-	<div id="card-drop2" draggable="true">chart</div>
-	<div id="card-drop3" draggable="true">card-picker</div>
 	{{#each cards as |card|}}
-		<div class="card-drop" draggable="true" style="background-image: url('{{card.previewImage}}')"><label>{{card.previewName}}</label></div>
+		{{card-picker-card card=card}}
 	{{/each}}
 </div>
