--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -53,6 +53,7 @@ a {
 	margin:-10px 0 0 10px;
 	padding:0;
 	width:50%;
+	line-height: 0px;
 }
 .card-right .__mobiledoc-card {
 	margin: 0 0 0 28px;
@@ -63,6 +64,7 @@ a {
 	margin:-10px 10px 0 0;
 	padding:0;
 	width:50%;
+	line-height: 0px;
 }
 .card-left .__mobiledoc-card {
 	margin: 0 28px 0 0;
@@ -74,6 +76,7 @@ a {
 	width:100%;
 	line-height: 0px;
 }
+
 
 .__mobiledoc-card {
 	margin: 0 0 0 0;
@@ -203,6 +206,7 @@ a {
 .card-slideshow {
 	height:100%;
 	background-color:#000;
+
 }
 .card-slideshow p, .card-slideshow textarea {
 	display:block;
@@ -217,8 +221,16 @@ a {
 	z-index: 9999;
 	margin:0;
 	padding:10px;
+}
 
-
+.card-slideshow-preview  {
+	position:relative;
+	border:1px solid;
+	overflow: auto;
+	z-index: 999999;
+	width:100%;
+	height:400px;
+	background-color: rgba( 0,0,0,0.3);
 
 }
 
@@ -251,8 +263,9 @@ a {
 
 .card .card-handle, .card-left .card-handle, .card-right .card-handle {
 	
-	position:relative;
+	position:absolute;
 	margin-top:-1.3em;
+	
 	height:1.3em;
 	background-color:#5ba4e5;
 	
@@ -263,6 +276,13 @@ a {
 	text-align:right;
 	overflow:hidden;
 	display:none;
+	
+	width:100px;
+
+}
+
+.card-right .card-handle {
+	margin-left:28px;
 }
 
 .card:hover .card-handle, .card-left:hover .card-handle, .card-right:hover .card-handle 
