--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -152,8 +152,32 @@ a {
 
 #toolbar {
 	position:fixed;
+	background-color:#fff;
+	width:780px;
+	padding:20px 30px 5px 30px;
+	margin-left:-30px;
+	z-index: 999999;
+	top:0px;
+	border-bottom: 1px solid #718087;
 
 }
+#toolbar button  {
+	margin-top:1px;
+	color: #718087;
+	background-color:#fff;
+	border:none;
+	border-radius:20px;
+	margin-left:10px;
+	height:40px;
+	min-width: 40px;
+	border:1px solid;
+	font-size:20px;
+}
+#toolbar button:hover {
+	background-color:#718087;
+	color:#fff;
+}
+
 #card-holder {
 	position:fixed;
 	width:145px;
@@ -245,6 +269,7 @@ a {
 	display:block;
 	padding:100px 0px 100px 0px;
 	font-size:2em;
+	line-height: 2.2em;
 	color:#fff;
 }
 .card-soundcloud input {
@@ -264,10 +289,10 @@ a {
 .card .card-handle, .card-left .card-handle, .card-right .card-handle {
 	
 	position:absolute;
-	margin-top:-1.3em;
+	margin-top:-40px;
 	
-	height:1.3em;
-	background-color:#5ba4e5;
+	height:40px;
+	
 	
 	cursor: -webkit-grab;
 	cursor: -moz-grab;
@@ -277,7 +302,7 @@ a {
 	overflow:hidden;
 	display:none;
 	
-	width:100px;
+	
 
 }
 
@@ -292,8 +317,41 @@ a {
 
 .card .card-handle button, .card-left .card-handle button, .card-right .card-handle button {
 	margin-top:1px;
-	background-color:#e9e8dd;
+	color: #718087;
+	background-color:#fff;
 	border:none;
-	border-radius:5px;
+	border-radius:15px;
 	margin-left:10px;
+	height:30px;
+	min-width: 30px;
+	border:1px solid;
+	font-size:20px;
+	
+}
+
+.card .card-handle button.confirm, .card-left .card-handle button.confirm, .card-right .card-handle button.confirm  {
+	animation-duration: 1s;
+  	animation-name: rotate;
+  	background-color: red;
+    color: #e9e8dd;
+}
+
+@keyframes rotate {
+  from {
+  	-webkit-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    transform: rotate(0deg);
+    background-color: #fff;
+    color: #718087;
+  }
+
+  to {
+  	-webkit-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    transform: rotate(360deg);
+    background-color: red;
+    color: #e9e8dd;
+  }
 }
